<resources>
    <string name="app_name">Quiz App</string>

    <!-- String resources used in the Educational App
    i.e Qxy
     Q = Question
     x = Question number
     y = Question option-->
    <string name="N1">1.\t</string>
    <string name="Q1">Nigeria became a republic in :</string>
    <string name="Q1a">1959</string>
    <string name="Q1b">1960</string>
    <string name="Q1c">1963</string>
    <string name="Q1d">1970</string>
    <string name="N2">2.\t</string>
    <string name="Q2">Nigeria Gained independence in the Year :</string>
    <string name="Q2a">1900</string>
    <string name="Q2b">1963</string>
    <string name="Q2c">1960</string>
    <string name="Q2d">1969</string>
    <string name="N3">3.\t</string>
    <string name="Q3">How many Countries below are African Countries :</string>
    <string name="Q3a">Egypt</string>
    <string name="Q3b">Australia</string>
    <string name="Q3c">Senegal</string>
    <string name="Q3d">Nigeria</string>
    <string name="N4">4.\t</string>
    <string name="Q4">The highest court in Nigeria is :</string>
    <string name="Q4a">Court of Appeal</string>
    <string name="Q4b">High Court</string>
    <string name="Q4c">Supreme Court</string>
    <string name="Q4d">Magistrate court</string>
    <string name="N5">5.\t</string>
    <string name="Q5">The first general election in Nigeria was held in :</string>
    <string name="Q5a">1960</string>
    <string name="Q5b">1977</string>
    <string name="Q5c">1959</string>
    <string name="Q5d">1969</string>
    <string name="N6">6.\t</string>
    <string name="Q6">What is the Name of the most Populous African Country ?</string>
    <string name="N7">7.\t</string>
    <string name="Q7">The National youth service corp. was established in year :</string>
    <string name="Q7a">1966</string>
    <string name="Q7b">1985</string>
    <string name="Q7c">1973</string>
    <string name="Q7d">1992</string>
    <string name="N8">8.\t</string>
    <string name="Q8">Africa consist of how many countries :</string>
    <string name="Q8a">60</string>
    <string name="Q8b">50</string>
    <string name="Q8c">54</string>
    <string name="Q8d">77</string>
    <string name="N9">9.\t</string>
    <string name="Q9">The Headquarter of UN is in :</string>
    <string name="Q9a">Washington</string>
    <string name="Q9b">Geneva</string>
    <string name="Q9c">New York</string>
    <string name="Q9d">Vienna</string>
    <string name="N10">10.\t</string>
    <string name="Q10">The First Military Coup-de’tat in Africa was in :</string>
    <string name="Q10a">Nigeria</string>
    <string name="Q10b">Liberia</string>
    <string name="Q10c">Egypt</string>
    <string name="Q10d">Libya</string>
    <string name="submit">Submit</string>
    <string name="result_statement">Test Completed!\n\n</string>
    <string name="result_score">Your Score is : </string>
    <string name="hint">Enter Your Answer here</string>
    <string name="result_wrong_answer">You Might Wish to Correct the Answers for Questions : </string>
</resources>
